mesh/ingress-controller/ingress-v.0.2/apple-test/apple.yml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  namespace: nginx-ingress 
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
  namespace: nginx-ingress
spec:
  selector:
    app: apple
  ports:
    - port: 5678
